--- a/archives/toutiao-search/2024-05-03.md
+++ b/archives/toutiao-search/2024-05-03.md
@@ -1,55 +1,65 @@
 # 2024-05-03
 
-共 135 条
+共 144 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri May 03 2024 10:19:49 GMT+0800 (China Standard Time) -->
-1. [直击河大礼堂着火后：房顶基本坍塌](https://so.toutiao.com/search?keyword=直击河大礼堂着火后：房顶基本坍塌)
+<!-- 最后更新时间 Fri May 03 2024 11:00:44 GMT+0800 (China Standard Time) -->
+1. [河南省文物局调查河大礼堂着火](https://so.toutiao.com/search?keyword=河南省文物局调查河大礼堂着火)
 1. [台退将称赞福建舰建造水平堪称顶级](https://so.toutiao.com/search?keyword=台退将称赞福建舰建造水平堪称顶级)
 1. [涨知识！43项来自中国的世界非遗](https://so.toutiao.com/search?keyword=涨知识！43项来自中国的世界非遗)
-1. [2分钟了解高速公路结构和设计原理](https://so.toutiao.com/search?keyword=2分钟了解高速公路结构和设计原理)
-1. [土耳其宣布停止与以色列所有贸易](https://so.toutiao.com/search?keyword=土耳其宣布停止与以色列所有贸易)
+1. [中国三航母全家福来了](https://so.toutiao.com/search?keyword=中国三航母全家福来了)
 1. [游客滞留半夜徒步下山 宝泉致歉](https://so.toutiao.com/search?keyword=游客滞留半夜徒步下山+宝泉致歉)
-1. [美国黑人男子遭警察跪压后身亡](https://so.toutiao.com/search?keyword=美国黑人男子遭警察跪压后身亡)
-1. [每个城市都“来了一亿人”](https://so.toutiao.com/search?keyword=每个城市都“来了一亿人”)
+1. [2分钟了解高速公路结构和设计原理](https://so.toutiao.com/search?keyword=2分钟了解高速公路结构和设计原理)
 1. [淄博八大局炒锅饼小哥成新晋顶流](https://so.toutiao.com/search?keyword=淄博八大局炒锅饼小哥成新晋顶流)
-1. [武切维奇出任塞尔维亚新总理](https://so.toutiao.com/search?keyword=武切维奇出任塞尔维亚新总理)
+1. [土耳其宣布停止与以色列所有贸易](https://so.toutiao.com/search?keyword=土耳其宣布停止与以色列所有贸易)
+1. [每个城市都“来了一亿人”](https://so.toutiao.com/search?keyword=每个城市都“来了一亿人”)
+1. [上海推出商品住房“以旧换新”活动](https://so.toutiao.com/search?keyword=上海推出商品住房“以旧换新”活动)
 1. [张国清赴梅州指导高速塌方灾害处置](https://so.toutiao.com/search?keyword=张国清赴梅州指导高速塌方灾害处置)
-1. [以方代表在联大称联合国日子不多了](https://so.toutiao.com/search?keyword=以方代表在联大称联合国日子不多了)
-1. [美国数十所大学已有超过2000人被捕](https://so.toutiao.com/search?keyword=美国数十所大学已有超过2000人被捕)
+1. [新一轮暴雨大暴雨会下在哪儿](https://so.toutiao.com/search?keyword=新一轮暴雨大暴雨会下在哪儿)
+1. [中国黄金需求创21年来新高](https://so.toutiao.com/search?keyword=中国黄金需求创21年来新高)
 1. [广州地铁辟谣沥滘站漏雨](https://so.toutiao.com/search?keyword=广州地铁辟谣沥滘站漏雨)
 1. [广东高速塌陷事故已致48死](https://so.toutiao.com/search?keyword=广东高速塌陷事故已致48死)
-1. [中国黄金需求创21年来新高](https://so.toutiao.com/search?keyword=中国黄金需求创21年来新高)
-1. [男子寻找救命恩人却发现他不幸牺牲](https://so.toutiao.com/search?keyword=男子寻找救命恩人却发现他不幸牺牲)
-1. [嫦娥六号首选窗口瞄准17时27分发射](https://so.toutiao.com/search?keyword=嫦娥六号首选窗口瞄准17时27分发射)
-1. [医疗专家披露高速塌方伤者救治详情](https://so.toutiao.com/search?keyword=医疗专家披露高速塌方伤者救治详情)
-1. [在西湖边又看到白衬衫警察了](https://so.toutiao.com/search?keyword=在西湖边又看到白衬衫警察了)
-1. [河大礼堂起火时疑有施工队休息](https://so.toutiao.com/search?keyword=河大礼堂起火时疑有施工队休息)
-1. [周鸿祎：已拿到迈巴赫尾款将捐献](https://so.toutiao.com/search?keyword=周鸿祎：已拿到迈巴赫尾款将捐献)
-1. [广东书记、省长面向塌方发生地三鞠躬](https://so.toutiao.com/search?keyword=广东书记、省长面向塌方发生地三鞠躬)
-1. [官方通报河南大学大礼堂起火](https://so.toutiao.com/search?keyword=官方通报河南大学大礼堂起火)
-1. [拍下周鸿祎迈巴赫当事人：已完成支付](https://so.toutiao.com/search?keyword=拍下周鸿祎迈巴赫当事人：已完成支付)
-1. [五一假期多地再现“最美人墙”](https://so.toutiao.com/search?keyword=五一假期多地再现“最美人墙”)
-1. [上海推出商品住房“以旧换新”活动](https://so.toutiao.com/search?keyword=上海推出商品住房“以旧换新”活动)
-1. [郭晋安欧倩怡离婚](https://so.toutiao.com/search?keyword=郭晋安欧倩怡离婚)
+1. [以方代表在联大称联合国日子不多了](https://so.toutiao.com/search?keyword=以方代表在联大称联合国日子不多了)
 1. [家长称女儿遭霸凌三年被打致耳出血](https://so.toutiao.com/search?keyword=家长称女儿遭霸凌三年被打致耳出血)
+1. [普京就职典礼邀请函曝光](https://so.toutiao.com/search?keyword=普京就职典礼邀请函曝光)
+1. [美国数十所大学超2000人被捕](https://so.toutiao.com/search?keyword=美国数十所大学超2000人被捕)
+1. [美国黑人男子遭警察跪压后身亡](https://so.toutiao.com/search?keyword=美国黑人男子遭警察跪压后身亡)
+1. [直击河大礼堂着火后：房顶基本坍塌](https://so.toutiao.com/search?keyword=直击河大礼堂着火后：房顶基本坍塌)
+1. [周鸿祎：已拿到迈巴赫尾款将捐献](https://so.toutiao.com/search?keyword=周鸿祎：已拿到迈巴赫尾款将捐献)
+1. [武切维奇出任塞尔维亚新总理](https://so.toutiao.com/search?keyword=武切维奇出任塞尔维亚新总理)
+1. [河大礼堂起火时疑有施工队休息](https://so.toutiao.com/search?keyword=河大礼堂起火时疑有施工队休息)
+1. [拍下周鸿祎迈巴赫当事人：已完成支付](https://so.toutiao.com/search?keyword=拍下周鸿祎迈巴赫当事人：已完成支付)
+1. [男子寻找救命恩人却发现他不幸牺牲](https://so.toutiao.com/search?keyword=男子寻找救命恩人却发现他不幸牺牲)
+1. [官方通报河南大学大礼堂起火](https://so.toutiao.com/search?keyword=官方通报河南大学大礼堂起火)
+1. [在西湖边又看到白衬衫警察了](https://so.toutiao.com/search?keyword=在西湖边又看到白衬衫警察了)
+1. [嫦娥六号首选窗口瞄准17时27分发射](https://so.toutiao.com/search?keyword=嫦娥六号首选窗口瞄准17时27分发射)
+1. [景区因开封王婆回归临时限流](https://so.toutiao.com/search?keyword=景区因开封王婆回归临时限流)
+1. [广东书记、省长面向塌方发生地三鞠躬](https://so.toutiao.com/search?keyword=广东书记、省长面向塌方发生地三鞠躬)
+1. [中金：美联储短期紧一些不是坏事](https://so.toutiao.com/search?keyword=中金：美联储短期紧一些不是坏事)
+1. [加沙民众呼吁停火谈判尽快达成](https://so.toutiao.com/search?keyword=加沙民众呼吁停火谈判尽快达成)
+1. [郭晋安欧倩怡离婚](https://so.toutiao.com/search?keyword=郭晋安欧倩怡离婚)
+1. [坐着火车游新疆](https://so.toutiao.com/search?keyword=坐着火车游新疆)
+1. [五一假期多地再现“最美人墙”](https://so.toutiao.com/search?keyword=五一假期多地再现“最美人墙”)
 1. [专家：055型大驱实现导弹共架发射](https://so.toutiao.com/search?keyword=专家：055型大驱实现导弹共架发射)
 1. [乌克兰宣布采购30万架无人机](https://so.toutiao.com/search?keyword=乌克兰宣布采购30万架无人机)
-1. [山西恒山景区落石砸中游客致1死5伤](https://so.toutiao.com/search?keyword=山西恒山景区落石砸中游客致1死5伤)
+1. [广东书记：塌方灾害教训十分深刻](https://so.toutiao.com/search?keyword=广东书记：塌方灾害教训十分深刻)
 1. [奔驰男违停骂人 交警来后瞬间老实](https://so.toutiao.com/search?keyword=奔驰男违停骂人+交警来后瞬间老实)
 1. [杭州西湖边连续第9年现最美人墙](https://so.toutiao.com/search?keyword=杭州西湖边连续第9年现最美人墙)
-1. [黄轩称在天水两天变成了黄“干”](https://so.toutiao.com/search?keyword=黄轩称在天水两天变成了黄“干”)
-1. [21岁小伙疑被女友PUA跳江自杀](https://so.toutiao.com/search?keyword=21岁小伙疑被女友PUA跳江自杀)
-1. [广东书记：塌方灾害教训十分深刻](https://so.toutiao.com/search?keyword=广东书记：塌方灾害教训十分深刻)
-1. [秦昊不想再分享减肥法了](https://so.toutiao.com/search?keyword=秦昊不想再分享减肥法了)
-1. [寻找龙泉青瓷“常青”的答案](https://so.toutiao.com/search?keyword=寻找龙泉青瓷“常青”的答案)
-1. [中华保险向梅大高速预付1000万元](https://so.toutiao.com/search?keyword=中华保险向梅大高速预付1000万元)
-1. [媒体对话电工界的“福尔摩斯”](https://so.toutiao.com/search?keyword=媒体对话电工界的“福尔摩斯”)
+1. [医疗专家披露高速塌方伤者救治详情](https://so.toutiao.com/search?keyword=医疗专家披露高速塌方伤者救治详情)
 1. [以色列外长指责土耳其违反贸易协议](https://so.toutiao.com/search?keyword=以色列外长指责土耳其违反贸易协议)
+1. [日日鲜老板趣谈淄博烧烤](https://so.toutiao.com/search?keyword=日日鲜老板趣谈淄博烧烤)
+1. [中华保险向梅大高速预付1000万元](https://so.toutiao.com/search?keyword=中华保险向梅大高速预付1000万元)
+1. [《哈尔滨一九四四》卓文被同伴背叛](https://so.toutiao.com/search?keyword=《哈尔滨一九四四》卓文被同伴背叛)
+1. [山西恒山景区落石砸中游客致1死5伤](https://so.toutiao.com/search?keyword=山西恒山景区落石砸中游客致1死5伤)
+1. [21岁小伙疑被女友PUA跳江自杀](https://so.toutiao.com/search?keyword=21岁小伙疑被女友PUA跳江自杀)
+1. [秦昊不想再分享减肥法了](https://so.toutiao.com/search?keyword=秦昊不想再分享减肥法了)
+1. [游客云南沧源共度“摸你黑”狂欢节](https://so.toutiao.com/search?keyword=游客云南沧源共度“摸你黑”狂欢节)
+1. [美国数十所大学已有超过2000人被捕](https://so.toutiao.com/search?keyword=美国数十所大学已有超过2000人被捕)
+1. [黄轩称在天水两天变成了黄“干”](https://so.toutiao.com/search?keyword=黄轩称在天水两天变成了黄“干”)
+1. [寻找龙泉青瓷“常青”的答案](https://so.toutiao.com/search?keyword=寻找龙泉青瓷“常青”的答案)
+1. [媒体对话电工界的“福尔摩斯”](https://so.toutiao.com/search?keyword=媒体对话电工界的“福尔摩斯”)
 1. [五一玩转武汉长沙线路推荐](https://so.toutiao.com/search?keyword=五一玩转武汉长沙线路推荐)
-1. [中金：美联储短期紧一些不是坏事](https://so.toutiao.com/search?keyword=中金：美联储短期紧一些不是坏事)
 1. [诱骗女生骑大马 男生涉嫌违法吗](https://so.toutiao.com/search?keyword=诱骗女生骑大马+男生涉嫌违法吗)
-1. [新一轮暴雨大暴雨会下在哪儿](https://so.toutiao.com/search?keyword=新一轮暴雨大暴雨会下在哪儿)
 1. [朱珠办二手集市门票商品被高价倒卖](https://so.toutiao.com/search?keyword=朱珠办二手集市门票商品被高价倒卖)
 1. [安徽省政协原副主席徐乐义逝世](https://so.toutiao.com/search?keyword=安徽省政协原副主席徐乐义逝世)
 1. [五一假期桂林超火热](https://so.toutiao.com/search?keyword=五一假期桂林超火热)
@@ -62,7 +72,6 @@
 1. [切尔西2-0胜热刺 完成赛季双杀](https://so.toutiao.com/search?keyword=切尔西2-0胜热刺+完成赛季双杀)
 1. [俄罗斯缴获北约武器展在莫斯科开幕](https://so.toutiao.com/search?keyword=俄罗斯缴获北约武器展在莫斯科开幕)
 1. [五一哈尔滨有一亿人吧](https://so.toutiao.com/search?keyword=五一哈尔滨有一亿人吧)
-1. [《哈尔滨一九四四》卓文被同伴背叛](https://so.toutiao.com/search?keyword=《哈尔滨一九四四》卓文被同伴背叛)
 1. [西湖公交总客流破单日历史最高纪录](https://so.toutiao.com/search?keyword=西湖公交总客流破单日历史最高纪录)
 1. [加州大学洛杉矶分校上百抗议者被捕](https://so.toutiao.com/search?keyword=加州大学洛杉矶分校上百抗议者被捕)
 1. [五一首日杭州接待游客170.27万人次](https://so.toutiao.com/search?keyword=五一首日杭州接待游客170.27万人次)
